# libanim

./: Makefile  Makefile.am  README  TODO  anim.c  anim.h  configure.ac  libanim.pc.in  run-example.sh  test.c
src/: Makefile.am  anim.c  anim.h  example.c  test.c
